--- a/boards/shields/Splittyboi/Splittyboi.zmk.yml
+++ b/boards/shields/Splittyboi/Splittyboi.zmk.yml
@@ -3,6 +3,7 @@ id: splittyboi
 name: Splittyboi
 type: shield
 url: https://github.com/hrafnkell/splittyboi/
-requires: [nice_nano_v2]
+requires: 
+  - nice_nano_v2
 features:
   - keys
