--- a/build.yaml
+++ b/build.yaml
@@ -40,10 +40,4 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: splittyboi_left
-  - board: nice_nano_v2
-    shield: splittyboi_right
-  - shield: lily58_left
-    board: nice_nano_v2
-  - shield: lily58_right
-    board: nice_nano_v2
+    shield: splittyboi
