--- a/build.yaml
+++ b/build.yaml
@@ -37,7 +37,8 @@
 #     cmake-args: -DCONFIG_ZMK_STUDIO=y
 #     artifact-name: corne_left_with_studio
 #
----
+board: [ "nice_nano_v2" ]
+shield: [ "splittyboi" ]
 include:
   - board: nice_nano_v2
     shield: splittyboi
