Case sensitive shield

--- a/build.yaml
+++ b/build.yaml
@@ -38,7 +38,7 @@
 #     artifact-name: corne_left_with_studio
 #
 board: [ "nice_nano_v2" ]
-shield: [ "splittyboi" ]
+shield: [ "Splittyboi" ]
 include:
   - board: nice_nano_v2
-    shield: splittyboi
+    shield: Splittyboi
